@@ -31,17 +31,23 @@ import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
+import org.apache.fineract.infrastructure.core.serialization.gson.JsonExclude;
+import org.apache.fineract.infrastructure.core.service.DateUtils;
 import org.apache.fineract.infrastructure.core.service.MathUtil;
+import org.apache.fineract.organisation.monetary.domain.MonetaryCurrency;
 import org.apache.fineract.organisation.monetary.domain.Money;
+import org.apache.fineract.portfolio.loanproduct.domain.ILoanConfigurationDetails;
 import org.apache.fineract.portfolio.util.Memo;
 
 @ToString(exclude = { "previous" })
 @EqualsAndHashCode(exclude = { "previous" })
-public final class RepaymentPeriod {
+public class RepaymentPeriod {
 
+    @JsonExclude
     private final RepaymentPeriod previous;
+    @Setter
     @Getter
-    private final LocalDate fromDate;
+    private LocalDate fromDate;
     @Setter
     @Getter
     private LocalDate dueDate;
@@ -49,25 +55,64 @@ public final class RepaymentPeriod {
     @Setter
     private List<InterestPeriod> interestPeriods;
     @Setter
-    @Getter
     private Money emi;
     @Setter
-    @Getter
     private Money originalEmi;
-    @Getter
     private Money paidPrincipal;
-    @Getter
     private Money paidInterest;
+    @Setter
+    private Money futureUnrecognizedInterest;
 
+    @JsonExclude
+    @Getter
     private final MathContext mc;
 
+    @JsonExclude
     private Memo<BigDecimal> rateFactorPlus1Calculation;
+    @JsonExclude
     private Memo<Money> calculatedDueInterestCalculation;
+    @JsonExclude
     private Memo<Money> dueInterestCalculation;
+    @JsonExclude
     private Memo<Money> outstandingBalanceCalculation;
+    @Getter
+    @Setter
+    private boolean isInterestMoved = false;
 
-    private RepaymentPeriod(RepaymentPeriod previous, LocalDate fromDate, LocalDate dueDate, List<InterestPeriod> interestPeriods,
-            Money emi, Money originalEmi, Money paidPrincipal, Money paidInterest, MathContext mc) {
+    @Setter
+    private Money totalDisbursedAmount;
+
+    @Setter
+    private Money totalCapitalizedIncomeAmount;
+    @JsonExclude
+    @Getter
+    private final ILoanConfigurationDetails loanProductRelatedDetail;
+    @JsonExclude
+    @Setter
+    private MonetaryCurrency currency;
+
+    @Getter
+    @Setter
+    private Money creditedPrincipalMovedDueReAge;
+    @Getter
+    @Setter
+    private Money creditedInterestMovedDueReAge;
+    @Setter
+    @Getter
+    private boolean noUnrecognisedInterest;
+    @Setter
+    @Getter
+    private boolean reAged;
+    @Setter
+    @Getter
+    private boolean reAgedEarlyRepaymentHolder;
+    @Setter
+    private Money fixedInterest;
+
+    protected RepaymentPeriod(RepaymentPeriod previous, LocalDate fromDate, LocalDate dueDate, List<InterestPeriod> interestPeriods,
+            Money emi, Money originalEmi, Money paidPrincipal, Money paidInterest, Money futureUnrecognizedInterest, MathContext mc,
+            ILoanConfigurationDetails loanProductRelatedDetail, boolean noUnrecognisedInterest, boolean reAged,
+            boolean reAgedEarlyRepaymentHolder, Money fixedInterest) {
         this.previous = previous;
         this.fromDate = fromDate;
         this.dueDate = dueDate;
@@ -76,40 +121,70 @@ public final class RepaymentPeriod {
         this.originalEmi = originalEmi;
         this.paidPrincipal = paidPrincipal;
         this.paidInterest = paidInterest;
+        this.futureUnrecognizedInterest = futureUnrecognizedInterest;
         this.mc = mc;
+        this.loanProductRelatedDetail = loanProductRelatedDetail;
+        this.noUnrecognisedInterest = noUnrecognisedInterest;
+        this.reAged = reAged;
+        this.reAgedEarlyRepaymentHolder = reAgedEarlyRepaymentHolder;
+        this.fixedInterest = fixedInterest;
+        this.creditedInterestMovedDueReAge = Money.zero(loanProductRelatedDetail.getCurrencyData(), mc);
+        this.creditedInterestMovedDueReAge = Money.zero(loanProductRelatedDetail.getCurrencyData(), mc);
     }
 
-    public static RepaymentPeriod create(RepaymentPeriod previous, LocalDate fromDate, LocalDate dueDate, Money emi, MathContext mc) {
+    public static RepaymentPeriod empty(RepaymentPeriod previous, MathContext mc, ILoanConfigurationDetails loanProductRelatedDetail) {
+        return new RepaymentPeriod(previous, null, null, new ArrayList<>(), null, null, null, null, null, mc, loanProductRelatedDetail,
+                false, false, false, null);
+    }
+
+    public static RepaymentPeriod create(RepaymentPeriod previous, LocalDate fromDate, LocalDate dueDate, Money emi, MathContext mc,
+            ILoanConfigurationDetails loanProductRelatedDetail) {
         final Money zero = emi.zero();
         final RepaymentPeriod newRepaymentPeriod = new RepaymentPeriod(previous, fromDate, dueDate, new ArrayList<>(), emi, emi, zero, zero,
-                mc);
+                zero, mc, loanProductRelatedDetail, false, false, false, zero);
         // There is always at least 1 interest period, by default with same from-due date as repayment period
-        newRepaymentPeriod.interestPeriods.add(InterestPeriod.withEmptyAmounts(newRepaymentPeriod, fromDate, dueDate));
+        newRepaymentPeriod.getInterestPeriods().add(InterestPeriod.withEmptyAmounts(newRepaymentPeriod, fromDate, dueDate));
         return newRepaymentPeriod;
     }
 
     public static RepaymentPeriod copy(RepaymentPeriod previous, RepaymentPeriod repaymentPeriod, MathContext mc) {
-        final RepaymentPeriod newRepaymentPeriod = new RepaymentPeriod(previous, repaymentPeriod.fromDate, repaymentPeriod.dueDate,
-                new ArrayList<>(), repaymentPeriod.emi, repaymentPeriod.originalEmi, repaymentPeriod.paidPrincipal,
-                repaymentPeriod.paidInterest, mc);
+        final RepaymentPeriod newRepaymentPeriod = new RepaymentPeriod(previous, repaymentPeriod.getFromDate(),
+                repaymentPeriod.getDueDate(), new ArrayList<>(), repaymentPeriod.getEmi(), repaymentPeriod.getOriginalEmi(),
+                repaymentPeriod.getPaidPrincipal(), repaymentPeriod.getPaidInterest(), repaymentPeriod.getFutureUnrecognizedInterest(), mc,
+                repaymentPeriod.getLoanProductRelatedDetail(), repaymentPeriod.isNoUnrecognisedInterest(), repaymentPeriod.isReAged(),
+                repaymentPeriod.isReAgedEarlyRepaymentHolder(), repaymentPeriod.getFixedInterest());
+        newRepaymentPeriod.setCreditedPrincipalMovedDueReAge(repaymentPeriod.getCreditedPrincipalMovedDueReAge());
+        newRepaymentPeriod.setCreditedInterestMovedDueReAge(repaymentPeriod.getCreditedInterestMovedDueReAge());
+        newRepaymentPeriod.setTotalDisbursedAmount(repaymentPeriod.getTotalDisbursedAmount());
+        newRepaymentPeriod.setTotalCapitalizedIncomeAmount(repaymentPeriod.getTotalCapitalizedIncomeAmount());
+        newRepaymentPeriod.setInterestMoved(repaymentPeriod.isInterestMoved());
+        newRepaymentPeriod.setCurrency(repaymentPeriod.getCurrency());
         // There is always at least 1 interest period, by default with same from-due date as repayment period
-        for (InterestPeriod interestPeriod : repaymentPeriod.interestPeriods) {
-            newRepaymentPeriod.interestPeriods.add(InterestPeriod.copy(newRepaymentPeriod, interestPeriod));
+        for (InterestPeriod interestPeriod : repaymentPeriod.getInterestPeriods()) {
+            newRepaymentPeriod.getInterestPeriods().add(InterestPeriod.copy(newRepaymentPeriod, interestPeriod, mc));
         }
         return newRepaymentPeriod;
     }
 
     public static RepaymentPeriod copyWithoutPaidAmounts(RepaymentPeriod previous, RepaymentPeriod repaymentPeriod, MathContext mc) {
-        final Money zero = repaymentPeriod.emi.zero();
-        final RepaymentPeriod newRepaymentPeriod = new RepaymentPeriod(previous, repaymentPeriod.fromDate, repaymentPeriod.dueDate,
-                new ArrayList<>(), repaymentPeriod.emi, repaymentPeriod.originalEmi, zero, zero, mc);
+        final Money zero = Money.zero(repaymentPeriod.getCurrency(), mc);
+        final RepaymentPeriod newRepaymentPeriod = new RepaymentPeriod(previous, repaymentPeriod.getFromDate(),
+                repaymentPeriod.getDueDate(), new ArrayList<>(), repaymentPeriod.getEmi(), repaymentPeriod.getOriginalEmi(), zero, zero,
+                zero, mc, repaymentPeriod.getLoanProductRelatedDetail(), repaymentPeriod.isNoUnrecognisedInterest(),
+                repaymentPeriod.isReAged(), repaymentPeriod.isReAgedEarlyRepaymentHolder(), repaymentPeriod.getFixedInterest());
+        newRepaymentPeriod.setCreditedPrincipalMovedDueReAge(repaymentPeriod.getCreditedPrincipalMovedDueReAge());
+        newRepaymentPeriod.setCreditedInterestMovedDueReAge(repaymentPeriod.getCreditedInterestMovedDueReAge());
+        newRepaymentPeriod.setTotalDisbursedAmount(repaymentPeriod.getTotalDisbursedAmount());
+        newRepaymentPeriod.setTotalCapitalizedIncomeAmount(repaymentPeriod.getTotalCapitalizedIncomeAmount());
+        newRepaymentPeriod.setInterestMoved(repaymentPeriod.isInterestMoved());
+        newRepaymentPeriod.setCurrency(repaymentPeriod.getCurrency());
         // There is always at least 1 interest period, by default with same from-due date as repayment period
-        for (InterestPeriod interestPeriod : repaymentPeriod.interestPeriods) {
+        for (InterestPeriod interestPeriod : repaymentPeriod.getInterestPeriods()) {
             var interestPeriodCopy = InterestPeriod.copy(newRepaymentPeriod, interestPeriod);
             if (!interestPeriodCopy.getBalanceCorrectionAmount().isZero()) {
                 interestPeriodCopy.addBalanceCorrectionAmount(interestPeriodCopy.getBalanceCorrectionAmount().negated());
             }
-            newRepaymentPeriod.interestPeriods.add(interestPeriodCopy);
+            newRepaymentPeriod.getInterestPeriods().add(interestPeriodCopy);
         }
         return newRepaymentPeriod;
     }
@@ -135,50 +210,76 @@ public final class RepaymentPeriod {
     }
 
     /**
-     * Gives back calculated due interest + chargeback interest
+     * Gives back calculated due interest + credited interest
      *
      * @return
      */
     @NotNull
     public Money getCalculatedDueInterest() {
         if (calculatedDueInterestCalculation == null) {
-            calculatedDueInterestCalculation = Memo.of(this::calculateCalculatedDueInterest,
-                    () -> new Object[] { this.previous, this.interestPeriods });
+            calculatedDueInterestCalculation = Memo.of(this::calculateCalculatedDueInterest, () -> new Object[] { previous, interestPeriods,
+                    futureUnrecognizedInterest, isInterestMoved, totalDisbursedAmount, fixedInterest, reAged });
         }
         return calculatedDueInterestCalculation.get();
     }
 
-    private Money calculateCalculatedDueInterest() {
-        Money calculatedDueInterest = Money.of(emi.getCurrencyData(),
-                getInterestPeriods().stream().map(InterestPeriod::getCalculatedDueInterest).reduce(BigDecimal.ZERO, BigDecimal::add), mc);
-        if (getPrevious().isPresent()) {
-            calculatedDueInterest = calculatedDueInterest.add(getPrevious().get().getUnrecognizedInterest(), mc);
+    public Money calculateFixedInterestTillDate() {
+        Money calculatedFixedInterest = getZero();
+        if (!getFixedInterest().isZero()) {
+            long length = DateUtils.getDifferenceInDays(getFromDate(), getDueDate());
+            if (length == 0 || getInterestPeriods() == null || getInterestPeriods().isEmpty()) {
+                // if the repayment period length is zero. return reAgedInterest.
+                calculatedFixedInterest = getFixedInterest();
+            } else {
+                long interestCalculationLength = DateUtils.getDifferenceInDays(getInterestPeriods().getFirst().getFromDate(),
+                        getInterestPeriods().getLast().getDueDate());
+                calculatedFixedInterest = Money.of(getZero().getCurrencyData(), BigDecimal.valueOf(interestCalculationLength)
+                        .divide(BigDecimal.valueOf(length), getMc()).multiply(getFixedInterest().getAmount(), getMc()));
+            }
         }
-        return calculatedDueInterest;
+        return calculatedFixedInterest;
+    }
+
+    public Money calculateCalculatedDueInterest() {
+        Money calculatedDueInterest = getZero();
+        if (!isInterestMoved()) {
+            calculatedDueInterest = Money.of(getEmi().getCurrencyData(),
+                    getInterestPeriods().stream().map(InterestPeriod::getCalculatedDueInterest).reduce(BigDecimal.ZERO, BigDecimal::add),
+                    mc);
+        }
+        calculatedDueInterest = calculatedDueInterest.add(getFixedInterest());
+        calculatedDueInterest = calculatedDueInterest.add(getFutureUnrecognizedInterest(), getMc());
+        if (getPrevious().isPresent()) {
+            calculatedDueInterest = calculatedDueInterest.add(getPrevious().get().getUnrecognizedInterest(), getMc());
+        }
+        return MathUtil.negativeToZero(calculatedDueInterest, getMc());
     }
 
     /**
-     * Gives back due interest + chargeback interest OR paid interest
+     * Gives back due interest + credited interest OR paid interest
      *
      * @return
      */
     public Money getDueInterest() {
         if (dueInterestCalculation == null) {
             // Due interest might be the maximum paid if there is pay-off or early repayment
-            dueInterestCalculation = Memo.of(() -> MathUtil.max(
-                    getPaidPrincipal().isGreaterThan(getCalculatedDuePrincipal()) ? getPaidInterest() : getCalculatedDueInterest(),
-                    getPaidInterest(), false), () -> new Object[] { paidPrincipal, paidInterest, interestPeriods });
+            dueInterestCalculation = Memo.of(
+                    () -> MathUtil.max(getPaidPrincipal().isGreaterThan(getCalculatedDuePrincipal()) ? getPaidInterest()
+                            : MathUtil.min(getCalculatedDueInterest(), getEmiPlusCreditedAmountsPlusFutureUnrecognizedInterest(), false),
+                            getPaidInterest(), false),
+                    () -> new Object[] { paidPrincipal, paidInterest, interestPeriods, futureUnrecognizedInterest, totalDisbursedAmount,
+                            fixedInterest, reAged, emi });
         }
         return dueInterestCalculation.get();
     }
 
     /**
-     * Gives back an EMI amount which includes chargeback amounts as well
+     * Gives back an EMI amount which includes credited amounts and future unrecognized interest as well
      *
      * @return
      */
-    public Money getEmiPlusChargeback() {
-        return getEmi().plus(getTotalChargebackAmount(), mc); //
+    public Money getEmiPlusCreditedAmountsPlusFutureUnrecognizedInterest() {
+        return getEmi().plus(getTotalCreditedAmount(), mc).plus(getFutureUnrecognizedInterest(), getMc()); //
     }
 
     /**
@@ -187,48 +288,63 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getCalculatedDuePrincipal() {
-        return getEmiPlusChargeback().minus(getCalculatedDueInterest(), mc);
+        return MathUtil.negativeToZero(getEmiPlusCreditedAmountsPlusFutureUnrecognizedInterest().minus(getCalculatedDueInterest(), getMc()),
+                getMc());
     }
 
     /**
-     * Sum of chargeback principals
+     * Sum of credited principals
      *
      * @return
      */
-    public Money getChargebackPrincipal() {
-        return interestPeriods.stream() //
-                .map(InterestPeriod::getChargebackPrincipal) //
-                .reduce(getZero(mc), (value, previous) -> value.plus(previous, mc)); //
+    public Money getCreditedPrincipal() {
+        return MathUtil.negativeToZero(getInterestPeriods().stream() //
+                .map(InterestPeriod::getCreditedPrincipal) //
+                .reduce(getZero(), (value, previous) -> value.plus(previous, getMc())), getMc()); //
     }
 
     /**
-     * Sum of chargeback interests
+     * Sum of credited interests
      *
      * @return
      */
-    public Money getChargebackInterest() {
-        return interestPeriods.stream() //
-                .map(InterestPeriod::getChargebackInterest) //
-                .reduce(getZero(mc), (value, previous) -> value.plus(previous, mc)); //
+    public Money getCreditedInterest() {
+        return MathUtil.negativeToZero(getInterestPeriods().stream() //
+                .map(InterestPeriod::getCreditedInterest) //
+                .reduce(getZero(), (value, previous) -> value.plus(previous, getMc())), getMc()); //
     }
 
     /**
-     * Gives back due principal + chargeback principal or paid principal
+     * Sum of capitalized income principals
+     *
+     * @return
+     */
+    public Money getCapitalizedIncomePrincipal() {
+        return MathUtil.negativeToZero(getInterestPeriods().stream() //
+                .map(InterestPeriod::getCapitalizedIncomePrincipal) //
+                .reduce(getZero(), (value, previous) -> value.plus(previous, getMc())), getMc()); //
+    }
+
+    /**
+     * Gives back due principal + credited principal or paid principal
      *
      * @return
      */
     public Money getDuePrincipal() {
         // Due principal might be the maximum paid if there is pay-off or early repayment
-        return MathUtil.max(getEmiPlusChargeback().minus(getDueInterest(), mc), getPaidPrincipal(), false);
+        return MathUtil.max(MathUtil
+                .negativeToZero(getEmiPlusCreditedAmountsPlusFutureUnrecognizedInterest().minus(getDueInterest(), getMc()), getMc()),
+                getPaidPrincipal(), false);
     }
 
     /**
-     * Gives back sum of all chargeback principal + chargeback interest
+     * Gives back sum of all credited principal + credited interest
      *
      * @return
      */
-    public Money getTotalChargebackAmount() {
-        return getChargebackPrincipal().plus(getChargebackInterest(), mc);
+    public Money getTotalCreditedAmount() {
+        return getCreditedPrincipal().plus(getCreditedInterest(), getMc()).minus(getCreditedInterestMovedDueReAge(), getMc())
+                .minus(getCreditedPrincipalMovedDueReAge(), getMc());
     }
 
     /**
@@ -237,11 +353,11 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getTotalPaidAmount() {
-        return getPaidPrincipal().plus(getPaidInterest());
+        return getPaidPrincipal().plus(getPaidInterest(), getMc());
     }
 
     public boolean isFullyPaid() {
-        return getEmi().isEqualTo(getTotalPaidAmount());
+        return getEmiPlusCreditedAmountsPlusFutureUnrecognizedInterest().isEqualTo(getTotalPaidAmount());
     }
 
     /**
@@ -251,34 +367,35 @@ public final class RepaymentPeriod {
      * @return
      */
     public Money getUnrecognizedInterest() {
-        return getCalculatedDueInterest().minus(getDueInterest(), mc);
+        return noUnrecognisedInterest ? getZero() : getCalculatedDueInterest().minus(getDueInterest(), getMc());
     }
 
     public Money getCreditedAmounts() {
-        return interestPeriods.stream().map(InterestPeriod::getCreditedAmounts).reduce(getZero(mc), (m1, m2) -> m1.plus(m2, mc));
+        return interestPeriods.stream().map(InterestPeriod::getCreditedAmounts).reduce(getZero(), (m1, m2) -> m1.plus(m2, getMc()));
     }
 
     public Money getOutstandingLoanBalance() {
         if (outstandingBalanceCalculation == null) {
             outstandingBalanceCalculation = Memo.of(() -> {
-                InterestPeriod lastInterestPeriod = getInterestPeriods().get(getInterestPeriods().size() - 1);
+                InterestPeriod lastInterestPeriod = getInterestPeriods().getLast();
                 Money calculatedOutStandingLoanBalance = lastInterestPeriod.getOutstandingLoanBalance() //
-                        .plus(lastInterestPeriod.getBalanceCorrectionAmount(), mc) //
-                        .plus(lastInterestPeriod.getDisbursementAmount(), mc) //
-                        .minus(getDuePrincipal(), mc)//
-                        .plus(getPaidPrincipal(), mc);//
-                return MathUtil.negativeToZero(calculatedOutStandingLoanBalance, mc);
-            }, () -> new Object[] { paidPrincipal, paidInterest, interestPeriods });
+                        .plus(lastInterestPeriod.getBalanceCorrectionAmount(), getMc()) //
+                        .plus(lastInterestPeriod.getCapitalizedIncomePrincipal(), getMc()) //
+                        .plus(lastInterestPeriod.getDisbursementAmount(), getMc()) //
+                        .plus(getPaidPrincipal(), getMc()) //
+                        .minus(getDuePrincipal(), getMc()); //
+                return MathUtil.negativeToZero(calculatedOutStandingLoanBalance, getMc());
+            }, () -> new Object[] { paidPrincipal, paidInterest, interestPeriods, totalDisbursedAmount });
         }
         return outstandingBalanceCalculation.get();
     }
 
     public void addPaidPrincipalAmount(Money paidPrincipal) {
-        this.paidPrincipal = MathUtil.plus(this.paidPrincipal, paidPrincipal, mc);
+        this.paidPrincipal = MathUtil.plus(this.getPaidPrincipal(), paidPrincipal, getMc());
     }
 
     public void addPaidInterestAmount(Money paidInterest) {
-        this.paidInterest = MathUtil.plus(this.paidInterest, paidInterest, mc);
+        this.paidInterest = MathUtil.plus(this.getPaidInterest(), paidInterest, getMc());
     }
 
     public Money getInitialBalanceForEmiRecalculation() {
@@ -286,26 +403,28 @@ public final class RepaymentPeriod {
         if (getPrevious().isPresent()) {
             initialBalance = getPrevious().get().getOutstandingLoanBalance();
         } else {
-            initialBalance = getZero(mc);
+            initialBalance = getZero();
         }
         Money totalDisbursedAmount = getInterestPeriods().stream() //
                 .map(InterestPeriod::getDisbursementAmount) //
-                .reduce(getZero(mc), (m1, m2) -> m1.plus(m2, mc)); //
-        return initialBalance.add(totalDisbursedAmount, mc);
+                .reduce(getZero(), (m1, m2) -> m1.plus(m2, getMc())); //
+        Money totalCapitalizedIncomeAmount = getInterestPeriods().stream() //
+                .map(InterestPeriod::getCapitalizedIncomePrincipal) //
+                .reduce(getZero(), (m1, m2) -> m1.plus(m2, getMc())); //
+        return initialBalance.add(totalDisbursedAmount, getMc()).add(totalCapitalizedIncomeAmount, getMc());
     }
 
-    private Money getZero(MathContext mc) {
-        // EMI is always initiated
-        return this.emi.zero(mc);
+    public Money getZero() {
+        return Money.zero(getCurrency(), getMc());
     }
 
     public InterestPeriod getFirstInterestPeriod() {
-        return getInterestPeriods().get(0);
+        return getInterestPeriods().getFirst();
     }
 
     public InterestPeriod getLastInterestPeriod() {
         List<InterestPeriod> interestPeriods = getInterestPeriods();
-        return interestPeriods.get(interestPeriods.size() - 1);
+        return interestPeriods.getLast();
     }
 
     public Optional<InterestPeriod> findInterestPeriod(@NotNull LocalDate transactionDate) {
@@ -317,5 +436,90 @@ public final class RepaymentPeriod {
 
     public boolean isFirstRepaymentPeriod() {
         return previous == null;
+    }
+
+    /**
+     * Gives back getDueInterest minus paid interest
+     *
+     * @return
+     */
+    public Money getOutstandingInterest() {
+        return MathUtil.negativeToZero(getDueInterest().minus(getPaidInterest()), getMc());
+    }
+
+    public Money getOutstandingPrincipal() {
+        return MathUtil.negativeToZero(getDuePrincipal().minus(getPaidPrincipal()), getMc());
+    }
+
+    public void resetDerivedComponents() {
+        this.paidInterest = paidInterest.zero();
+        this.paidPrincipal = paidPrincipal.zero();
+    }
+
+    /**
+     * @param tillPeriod
+     *            can be null. if null it calculates total disbursement including last interest period.
+     * @return disbursed and capitalized income amount till interest period.
+     */
+    public Money calculateTotalDisbursedAndCapitalizedIncomeAmountTillGivenPeriod(InterestPeriod tillPeriod) {
+        Money res = MathUtil.plus(getMc(), getTotalDisbursedAmount(), getTotalCapitalizedIncomeAmount());
+        for (InterestPeriod interestPeriod : this.getInterestPeriods()) {
+            if (interestPeriod.equals(tillPeriod)) {
+                break;
+            }
+            if (!interestPeriod.getDueDate().equals(getFromDate())) {
+                if (interestPeriod.getDisbursementAmount() != null) {
+                    res = res.plus(interestPeriod.getDisbursementAmount(), getMc());
+                }
+                if (interestPeriod.getCapitalizedIncomePrincipal() != null) {
+                    res = res.plus(interestPeriod.getCapitalizedIncomePrincipal(), getMc());
+                }
+            }
+        }
+        return res;
+    }
+
+    public MonetaryCurrency getCurrency() {
+        if (currency == null) {
+            currency = MonetaryCurrency.fromCurrencyData(loanProductRelatedDetail.getCurrencyData());
+        }
+        return currency;
+    }
+
+    public Money getEmi() {
+        return MathUtil.nullToZero(emi, getCurrency(), getMc());
+    }
+
+    public Money getOriginalEmi() {
+        return MathUtil.nullToZero(originalEmi, getCurrency(), getMc());
+    }
+
+    public Money getPaidPrincipal() {
+        return MathUtil.nullToZero(paidPrincipal, getCurrency(), getMc());
+    }
+
+    public Money getPaidInterest() {
+        return MathUtil.nullToZero(paidInterest, getCurrency(), getMc());
+    }
+
+    public Money getFutureUnrecognizedInterest() {
+        return MathUtil.nullToZero(futureUnrecognizedInterest, getCurrency(), getMc());
+    }
+
+    public Money getTotalDisbursedAmount() {
+        return MathUtil.nullToZero(totalDisbursedAmount, getCurrency(), getMc());
+    }
+
+    public Money getTotalCapitalizedIncomeAmount() {
+        return MathUtil.nullToZero(totalCapitalizedIncomeAmount, getCurrency(), getMc());
+    }
+
+    public Money getFixedInterest() {
+        return MathUtil.nullToZero(fixedInterest, getCurrency(), getMc());
+    }
+
+    public void moveOutstandingDueToReAging() {
+        setCreditedPrincipalMovedDueReAge(getCreditedPrincipal());
+        setCreditedInterestMovedDueReAge(getCreditedInterest());
     }
 }
